syntax = "proto3";

package pb;

option go_package = "internal/metadata/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "dtos/detection_section.proto";
import "dtos/file.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};


service DetectionSectionService {

    rpc ListDetectionSections (ListDetectionSectionsRequest) returns (ListDetectionSectionsResponse) {
        option (google.api.http) = {
            get: "/api/v1/datasource/{datasource_name}/detection_section"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {
              security_requirement: {
                key: "bearer";
              }
            }
          };
    }

    rpc GetDetectionSection (GetDetectionSectionRequest) returns (pb.DetectionSection) {
        option (google.api.http) = {
            get: "/api/v1/datasource/{datasource_name}/detection_section/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {
              security_requirement: {
                key: "bearer";
              }
            }
          };
    }

    rpc CreateDetectionSection (CreateDetectionSectionRequest) returns (pb.DetectionSection) {
        option (google.api.http) = {
            post: "/api/v1/datasource/{datasource_name}/detection_section"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {
              security_requirement: {
                key: "bearer";
              }
            }
          };
    }

    rpc UpdateDetectionSection (UpdateDetectionSectionRequest) returns (pb.DetectionSection) {
        option (google.api.http) = {
            put: "/api/v1/datasource/{datasource_name}/detection_section"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {
              security_requirement: {
                key: "bearer";
              }
            }
          };
    }

    rpc DeleteDetectionSection (DeleteDetectionSectionRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/api/v1/datasource/{datasource_name}/detection_section/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {
              security_requirement: {
                key: "bearer";
              }
            }
          };
    }

    rpc BulkCreateDetectionSections(BulkDetectionSectionRequest) returns (BulkDetectionSectionResponse) {
      option (google.api.http) = {
        post: "/api/v1/datasource/{datasource_name}/detection_section/bulk"
        body: "*"
      };    
      option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {      
        consumes: ["multipart/form-data"];
        security: {
          security_requirement: {
            key: "bearer";
          }
        }
      };
    }

}

message CreateDetectionSectionRequest {
  string datasource_name = 1;
  pb.DetectionSection detection_section = 2;
}

message UpdateDetectionSectionRequest {
  string datasource_name = 1;
  pb.DetectionSection detection_section = 2;
}
  
message DeleteDetectionSectionRequest {
  string datasource_name = 1;
    string id = 2;
}


message GetDetectionSectionRequest {
  string datasource_name = 1;
  string id = 2;
}
  
message ListDetectionSectionsRequest {
  string datasource_name = 1;
}

message ListDetectionSectionsResponse {
    string datasource_name = 1;
    repeated DetectionSection detection_sections = 2;
}

message BulkDetectionSectionRequest {
  string datasource_name = 1;
  File file = 2;
}

message BulkDetectionSectionResponse {
  repeated DetectionSection detection_sections = 1; 
}


